--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,4 @@
 driver = com.mysql.cj.jdbc.Driver
-url = jdbc:mysql://localhost:3306/budgetTracker
+url = jdbc:mysql://localhost:3306/indie_project
 username = root
 password = IH@v3N0Id3@?
